[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/nodes/TileInTree.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=2]
content_margin_left = 6.0
content_margin_top = 6.0

[node name="TileInTree" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1186.0
margin_bottom = -688.0
rect_min_size = Vector2( 180, 100 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.262745, 0.388235, 0.466667, 0.152941 )

[node name="Tree" type="Tree" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/bg = SubResource( 2 )

[node name="ErrorOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
hint_tooltip = "Error loading tile"
color = Color( 0.835294, 0.419608, 0.419608, 0.184314 )

[connection signal="item_collapsed" from="Tree" to="." method="_on_Tree_item_collapsed"]
[connection signal="item_selected" from="Tree" to="." method="_on_Tree_item_selected"]
